# socialminds-slam

./: .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  REQUIREMENTS.md  TODO.md
configs/: no-imu.yaml  openloris-cafe-masked.yaml  openloris-cafe.yaml  openloris-market-masked.yaml  openloris-market.yaml
configs/ablations/: depth-color.yaml  depth-masked-person.yaml  depth-masked.yaml  depth.yaml  full-masked-person.yaml  imu-odom-depth.yaml  market-masked-person.yaml  odom-depth-masked-person.yaml  odom-depth-masked.yaml  odom-depth.yaml  scan-imu.yaml  scan-odom-depth.yaml  scan-odom.yaml  scan.yaml
crates/slam-backend/: Cargo.toml
crates/slam-backend/src/: lib.rs
crates/slam-backend/tests/: loop_graph.rs  synthetic_graphs.rs
crates/slam-baseline/: Cargo.toml
crates/slam-baseline/src/: dead_reckoning.rs  lib.rs  odom_dead_reckoning.rs  stationary.rs
crates/slam-datasets/: Cargo.toml
crates/slam-datasets/src/: bag.rs  depth_msg.rs  imu_msg.rs  lib.rs  odom_msg.rs  scan_msg.rs  tf_msg.rs
crates/slam-datasets/tests/: make_fixture.py  read_bag.rs
crates/slam-datasets/tests/fixtures/: mini.bag
crates/slam-dynamics/: Cargo.toml
crates/slam-dynamics/src/: lib.rs  post.rs
crates/slam-dynamics/tests/: model_smoke.rs
crates/slam-frontend-scan/: Cargo.toml
crates/slam-frontend-scan/benches/: match_scans.rs
crates/slam-frontend-scan/src/: attitude.rs  icp.rs  lib.rs  odometry.rs  scan_to_map.rs  se2.rs
crates/slam-frontend-scan/tests/: dual_lidar.rs  loop_closure.rs  scan_to_map_world.rs  synthetic_world.rs  tilted_world.rs
crates/slam-frontend-scan/tests/common/: mod.rs
crates/slam-frontend-scan/tests/fixtures/: dual_lidar.urdf
crates/slam-gtsam-sys/: Cargo.toml  build.rs
crates/slam-gtsam-sys/cpp/: shim.cpp  shim.h
crates/slam-gtsam-sys/src/: lib.rs
crates/slam-map/: Cargo.toml
crates/slam-map/benches/: tsdf_ops.rs
crates/slam-map/src/: lib.rs  sparse.rs
crates/slam-replay/: Cargo.toml
crates/slam-replay/examples/: mask_dump.rs
crates/slam-replay/src/: config.rs  graph.rs  imu_csv.rs  main.rs  masking.rs  metrics.rs  viz.rs
crates/slam-rig/: Cargo.toml
crates/slam-rig/src/: lib.rs
crates/slam-types/: Cargo.toml
crates/slam-types/src/: geometry.rs  imu_csv.rs  lib.rs  scan_csv.rs  sensor.rs  system.rs  time.rs  trajectory.rs
docs/: ARCHITECTURE.md  REPORT_HUMAN_DETECTION.md  REPORT_MASKING_AB.md  ROADMAP.md  clean-map-plan.md
docs/adr/: 0000-template.md  0001-language-and-optimizer.md  0002-sensor-roles-and-pipeline.md  0003-gpu-optional-cpu-fallback.md  0004-map-representation.md  0005-evaluation-methodology.md  0006-vendored-gtsam-build.md  0007-frontend-order-and-scan-matching.md  0008-inhouse-bag-reader.md  0009-sensor-rig-model.md  0010-3d-state-vdb-submap-registration.md  0011-visualization-stack.md  0012-imu-optional.md  0013-run-configuration.md  0014-map-update-and-decay-policy.md  0015-dynamics-masking-yolo-onnx.md  0016-masking-altitude.md  README.md
eval/: README.md  pyproject.toml  requirements.txt
eval/harness/: __init__.py  benchmark.py  compute.py  datasets.py  fetch.py  metrics.py  replay.py  score.py  selftest.py  sensor_matrix.py  stsd.py  synthetic.py  viz.py
eval/masking-ab/: run-ab.sh  run-controls.sh
eval/reference/: README.md  run_rtabmap.sh
eval/reference/baselines/: README.md
eval/reference/baselines/ground0/: README.md  report.md  results.json
eval/reference/baselines/m3-planar-frontend/: README.md  report.md  results.json
eval/reference/sota/: README.md  openloris-scene-paper.json
eval/tests/: test_benchmark.py  test_compute.py  test_datasets.py  test_fetch.py  test_map_hygiene.py  test_openloris.py  test_sota.py  test_synthetic.py  test_viz.py
eval/tests/fixtures/euroc_mini/mav0/imu0/: data.csv
eval/tests/fixtures/euroc_mini/mav0/state_groundtruth_estimate0/: data.csv
eval/tests/fixtures/openloris_mini/: groundtruth.txt
onnx/: README.md
