[workspace]
resolver = "2"
members = [
    "crates/slam-types",
    "crates/slam-baseline",
    "crates/slam-datasets",
    "crates/slam-replay",
    "crates/slam-gtsam-sys",
    "crates/slam-backend",
    "crates/slam-frontend-scan",
    "crates/slam-rig",
    "crates/slam-map",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/severin-lemaignan/socialminds-slam"
authors = ["Séverin Lemaignan <severin@guakamole.org>"]

[workspace.dependencies]
# Core math. nalgebra is the dense small-matrix workhorse (SLAM is full of
# 6x6 / 15x15 blocks). See ADR 0001.
nalgebra = "0.33"
# Errors & CLI for binaries / tooling.
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
# FFI bridge to the wrapped C++ optimiser (ADR 0001).
cxx = "1"
# Data parallelism (ADR 0001 survey).
rayon = "1"
# URDF parsing — the robot's kinematic model is the primary extrinsics source (ADR 0009).
urdf-rs = "0.9"

# Internal crates
slam-types = { path = "crates/slam-types" }
slam-baseline = { path = "crates/slam-baseline" }
slam-gtsam-sys = { path = "crates/slam-gtsam-sys" }
slam-backend = { path = "crates/slam-backend" }
slam-frontend-scan = { path = "crates/slam-frontend-scan" }
slam-datasets = { path = "crates/slam-datasets" }
slam-rig = { path = "crates/slam-rig" }
slam-map = { path = "crates/slam-map" }

[profile.release]
lto = "thin"
codegen-units = 1

# Integration tests drive thousands of ICP/TSDF solves; unoptimised numeric code
# is ~50x slower (tests/loop_closure.rs: minutes instead of seconds). Keep the
# math-heavy crates optimised in dev/test builds; debug info stays on.
[profile.dev.package."*"]
opt-level = 2
[profile.dev.package.slam-types]
opt-level = 2
[profile.dev.package.slam-map]
opt-level = 2
[profile.dev.package.slam-frontend-scan]
opt-level = 2
