[package]
name = "slam-backend"
description = "Safe factor-graph backend API over the wrapped GTSAM optimiser (ADR 0001)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
slam-gtsam-sys.workspace = true
slam-types.workspace = true
thiserror.workspace = true
cxx.workspace = true

[dev-dependencies]
approx = "0.5"
nalgebra.workspace = true
