[package]
name = "slam-datasets"
description = "Dataset ingestion: read sensor streams from recorded logs (ROS1 bags) into engine types."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
slam-types.workspace = true
# Chunk decompression for the in-house ROS1 bag reader (ADR 0008): chunks are
# independent, so they decompress in parallel across cores.
bzip2 = "0.4"
lz4 = "1"
rayon.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true

[[bin]]
name = "slam-bag2imu"
path = "src/bin/bag2imu.rs"

[[bin]]
name = "slam-bag2scan"
path = "src/bin/bag2scan.rs"

[[bin]]
name = "slam-bag2csv"
path = "src/bin/bag2csv.rs"
