[package]
name = "slam-replay"
description = "CLI: drive a SlamSystem over recorded sensor input and emit a TUM trajectory for evaluation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "slam-replay"
path = "src/main.rs"

[[example]]
# Visual mask inspection (ADR 0015): overlay YOLO-seg masks on bag colour frames.
name = "mask_dump"
required-features = ["dynamics"]

[dependencies]
slam-types.workspace = true
slam-baseline.workspace = true
slam-frontend-scan.workspace = true
# Direct ROS1-bag input (--bag): stream topics without the CSV extraction stage.
slam-datasets.workspace = true
# Sensor frames + extrinsics from the robot's URDF (--urdf, ADR 0009).
slam-rig.workspace = true
# TSDF map access for --map-out / --rerun (the 3D front-end's map product).
slam-map.workspace = true
anyhow.workspace = true
clap.workspace = true
rerun = { version = "0.33.0", default-features = false, features = ["sdk"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
slam-backend.workspace = true
# Dynamics masking: YOLO-seg point rejection at depth ingest (ADR 0015).
slam-dynamics = { workspace = true, optional = true }

[features]
# Live / progressive 3D visualization via the rerun viewer (ADR 0011).
viz = ["dep:rerun"]
# Dynamics masking (--mask-model / `masking:` in the YAML config): ONNX Runtime is a
# C++ dependency, so it stays opt-in like the viz stack (ADR 0001/0015).
dynamics = ["dep:slam-dynamics"]
