[package]
name = "slam-rig"
description = "Sensor rig model: resolve sensor frames and extrinsics from the robot's URDF (ADR 0009)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
slam-types.workspace = true
urdf-rs.workspace = true
thiserror.workspace = true
